--- a/public/index.html
+++ b/public/index.html
@@ -1,50 +1,223 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Camelia • Simple Dictionary</title>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>SheCodes Dictionary App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+  <!-- Tailwind (utility CSS) -->
+  <script src="https://cdn.tailwindcss.com"></script>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  <!-- Meta (optional but nice for SEO/share) -->
+  <meta name="description" content="A fast, minimalist dictionary app with search, definitions, phonetics, audio, and synonyms." />
+  <meta property="og:title" content="Simple Dictionary" />
+  <meta property="og:description" content="Look up word meanings with phonetics, audio, and synonyms." />
+  <meta property="og:type" content="website" />
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  <style>
+    :root { --brand:#6b46c1; --brand-2:#7c3aed; }
+    .brand-gradient{ background: linear-gradient(135deg, var(--brand), var(--brand-2)); }
+    .soft-shadow{ box-shadow: 0 12px 28px rgba(17,24,39,.12); }
+  </style>
+</head>
+<body class="bg-gray-50 text-gray-800 min-h-screen flex flex-col">
+
+  <!-- NAV / HERO -->
+  <header class="brand-gradient text-white">
+    <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 py-10">
+      <h1 class="text-3xl sm:text-4xl font-extrabold tracking-tight">Simple Dictionary</h1>
+      <p class="mt-2 text-white/90">Search English words for quick definitions, phonetics, audio, examples, and synonyms.</p>
+
+      <!-- Search Bar -->
+      <form id="searchForm" class="mt-6">
+        <div class="bg-white rounded-2xl p-2 flex items-center gap-2 soft-shadow">
+          <input id="query" class="flex-1 px-4 py-3 rounded-xl outline-none"
+                 type="search" placeholder="Search a word (e.g., serendipity)" required />
+          <button class="px-4 py-3 rounded-xl text-white font-medium"
+                  style="background:#22c55e">Search</button>
+        </div>
+      </form>
+
+      <!-- Quick suggestions -->
+      <div class="mt-3 text-sm flex flex-wrap gap-2">
+        <span class="opacity-80">Try:</span>
+        <button class="suggest px-2 py-1 rounded-lg bg-white/10 hover:bg-white/20">sunset</button>
+        <button class="suggest px-2 py-1 rounded-lg bg-white/10 hover:bg-white/20">ephemeral</button>
+        <button class="suggest px-2 py-1 rounded-lg bg-white/10 hover:bg-white/20">resilience</button>
+        <button class="suggest px-2 py-1 rounded-lg bg-white/10 hover:bg-white/20">ubiquitous</button>
+      </div>
+    </div>
+  </header>
+
+  <!-- RESULTS -->
+  <main class="flex-1">
+    <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
+      <!-- STATUS / ERRORS -->
+      <div id="status" class="hidden rounded-xl border bg-white p-4 soft-shadow"></div>
+
+      <!-- Card -->
+      <article id="card" class="mt-6 bg-white rounded-2xl border soft-shadow overflow-hidden hidden">
+        <!-- Header -->
+        <div class="p-5 border-b">
+          <div class="flex items-start justify-between gap-3">
+            <div>
+              <h2 id="word" class="text-2xl font-bold"></h2>
+              <div id="phonetic" class="text-gray-600"></div>
+            </div>
+            <button id="playBtn"
+              class="px-3 py-2 rounded-lg border text-sm hidden hover:bg-gray-50"
+              title="Play pronunciation">🔊 Play</button>
+          </div>
+        </div>
+
+        <!-- Meanings -->
+        <div id="meanings" class="p-5 space-y-6"></div>
+
+        <!-- Synonyms -->
+        <div id="synonymsWrap" class="px-5 pb-5 hidden">
+          <h3 class="font-semibold mb-2">Synonyms</h3>
+          <div id="synonyms" class="flex flex-wrap gap-2"></div>
+        </div>
+      </article>
+    </div>
+  </main>
+
+  <!-- FOOTER -->
+  <footer class="border-t">
+    <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 py-6 text-sm flex flex-col sm:flex-row items-center gap-3 justify-between">
+      <p>© <span id="year"></span> Simple Dictionary</p>
+      <p class="text-gray-600">
+        ✌️ Built by Camelia Simion — open-sourced on
+        <a class="underline text-indigo-600" href="https://github.com/simcamelia/ResponsiveHW" target="_blank" rel="noopener">GitHub</a>.
+        Hosted on <a class="underline text-indigo-600" href="#" id="netlifyLink">Netlify</a>
+      </p>
+    </div>
+  </footer>
+
+  <script>
+    // Utilities
+    const $ = (q) => document.querySelector(q);
+    const statusEl = $('#status');
+    const cardEl = $('#card');
+    const wordEl = $('#word');
+    const phoneticEl = $('#phonetic');
+    const meaningsEl = $('#meanings');
+    const synonymsWrapEl = $('#synonymsWrap');
+    const synonymsEl = $('#synonyms');
+    const playBtn = $('#playBtn');
+    const netlifyLink = $('#netlifyLink');
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    // Set this to your final Netlify URL after deploy
+    netlifyLink.href = 'https://YOUR-NETLIFY-SITE.netlify.app/';
+
+    let audioUrl = null;
+
+    function showStatus(msg, type='info') {
+      statusEl.classList.remove('hidden');
+      statusEl.className = 'rounded-xl border bg-white p-4 soft-shadow';
+      if (type === 'error') statusEl.classList.add('border-rose-300', 'bg-rose-50');
+      else if (type === 'loading') statusEl.classList.add('border-indigo-300', 'bg-indigo-50');
+      else statusEl.classList.add('border-emerald-300', 'bg-emerald-50');
+      statusEl.textContent = msg;
+    }
+    function clearStatus(){ statusEl.classList.add('hidden'); statusEl.textContent=''; }
+
+    function renderDefinitions(entry){
+      // Word + phonetics
+      wordEl.textContent = entry.word || '';
+      const phon = (entry.phonetic || (entry.phonetics||[]).find(p=>p.text)?.text || '').trim();
+      phoneticEl.textContent = phon;
+
+      // Audio
+      audioUrl = null;
+      const phonAudio = (entry.phonetics || []).find(p => p.audio && p.audio.trim().length > 0);
+      if (phonAudio) { audioUrl = phonAudio.audio; playBtn.classList.remove('hidden'); }
+      else { playBtn.classList.add('hidden'); }
+
+      // Meanings
+      meaningsEl.innerHTML = '';
+      (entry.meanings || []).forEach(m => {
+        const box = document.createElement('section');
+        box.className = 'border rounded-xl p-4';
+        const pos = m.partOfSpeech ? `<span class="text-xs px-2 py-0.5 rounded-full bg-gray-100 border">${m.partOfSpeech}</span>` : '';
+        const defs = (m.definitions || []).slice(0,5).map(d => {
+          const ex = d.example ? `<div class="text-gray-600 mt-1">💡 <em>${escapeHtml(d.example)}</em></div>` : '';
+          return `<li class="mb-2 leading-relaxed"><span class="font-medium">${escapeHtml(d.definition)}</span>${ex}</li>`;
+        }).join('');
+        box.innerHTML = `
+          <div class="flex items-center justify-between mb-2">${pos}</div>
+          <ol class="list-decimal pl-5">${defs || '<li class="text-gray-600">No definitions provided.</li>'}</ol>
+        `;
+        meaningsEl.appendChild(box);
+      });
+
+      // Synonyms (aggregate)
+      const synSet = new Set();
+      (entry.meanings || []).forEach(m => (m.synonyms || []).forEach(s => synSet.add(s)));
+      synonymsEl.innerHTML = '';
+      if (synSet.size) {
+        synSet.forEach(s => {
+          const btn = document.createElement('button');
+          btn.className = 'px-2 py-1 rounded-lg border hover:bg-gray-50';
+          btn.textContent = s;
+          btn.addEventListener('click', () => search(s));
+          synonymsEl.appendChild(btn);
+        });
+        synonymsWrapEl.classList.remove('hidden');
+      } else {
+        synonymsWrapEl.classList.add('hidden');
+      }
+    }
+
+    function escapeHtml(s=''){
+      return s.replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#039;'}[m]));
+    }
+
+    async function search(term){
+      const q = term?.trim() || $('#query').value.trim();
+      if (!q) return;
+      showStatus('Looking up “‘'+ q +'’”…', 'loading');
+      cardEl.classList.add('hidden');
+
+      try {
+        const res = await fetch('https://api.dictionaryapi.dev/api/v2/entries/en/' + encodeURIComponent(q));
+        if (!res.ok) {
+          showStatus('No definitions found for “' + q + '”. Try another word.', 'error');
+          return;
+        }
+        const json = await res.json();
+        const entry = Array.isArray(json) ? json[0] : json;
+        clearStatus();
+        renderDefinitions(entry);
+        cardEl.classList.remove('hidden');
+        // Scroll to results on small screens
+        cardEl.scrollIntoView({ behavior: 'smooth', block: 'start' });
+      } catch (e) {
+        showStatus('Something went wrong. Check your connection and try again.', 'error');
+      }
+    }
+
+    // Events
+    document.getElementById('searchForm').addEventListener('submit', (e) => {
+      e.preventDefault();
+      search();
+    });
+    document.querySelectorAll('.suggest').forEach(btn => btn.addEventListener('click', () => {
+      $('#query').value = btn.textContent.trim(); search();
+    }));
+    playBtn.addEventListener('click', () => {
+      if (!audioUrl) return;
+      const a = new Audio(audioUrl);
+      a.play().catch(()=>{});
+    });
+
+    // Default lookup
+    window.addEventListener('DOMContentLoaded', () => {
+      const q = new URLSearchParams(location.search).get('q');
+      if (q) { $('#query').value = q; search(); }
+      else { $('#query').value = 'sunset'; search(); }
+    });
+  </script>
+</body>
 </html>
