Improve theme management and simplify meta tags
Refactor theme handling and update meta tags for clarity.

--- a/public/index.html
+++ b/public/index.html
@@ -5,47 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Camelia • Simple Dictionary</title>
 
-  <!-- Tailwind CDN: put config BEFORE the CDN script -->
+  <!-- 0) Apply saved/system theme BEFORE paint -->
   <script>
-    tailwind = {}; /* ensure object exists */
-    tailwind.config = { darkMode: 'class' };
+    (function () {
+      const root = document.documentElement;
+      const saved = localStorage.getItem('theme'); // 'dark' | 'light' | null
+      const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+      if (saved === 'dark' || (!saved && prefersDark)) root.classList.add('dark');
+      else root.classList.remove('dark');
+    })();
+  </script>
+
+  <!-- 1) Tailwind config MUST be defined BEFORE the CDN script -->
+  <script>
+    window.tailwind = { config: { darkMode: 'class' } };
   </script>
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- SEO Meta -->
-  <meta name="description" content="A fast, minimalist dictionary app that displays word definitions, phonetics, audio pronunciation, and synonyms — created by Camelia Simion." />
-  <link rel="canonical" href="https://your-dictionary-site.netlify.app/" />
-
-  <!-- Open Graph -->
-  <meta property="og:title" content="Camelia • Simple Dictionary" />
-  <meta property="og:description" content="Search words for quick definitions, audio pronunciation, and synonyms." />
-  <meta property="og:url" content="https://dictionarycs.netlify.app/" />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://your-dictionary-site.netlify.app/images/dictionary-preview.png" />
-
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Camelia • Simple Dictionary" />
-  <meta name="twitter:description" content="A responsive dictionary web app with phonetics, audio, and synonyms." />
-  <meta name="twitter:image" content="https://your-dictionary-site.netlify.app/images/dictionary-preview.png" />
-
+  <!-- Meta (kept short for clarity) -->
+  <meta name="description" content="Minimal dictionary app with definitions, phonetics, audio, and synonyms." />
   <link rel="icon" href="/images/Snapchat-2205782.png" type="image/png" />
 
   <style>
     :root { --accent:#22c55e; }
-    .soft-shadow{ box-shadow:0 12px 28px rgba(17,24,39,.12); }
+    .soft-shadow { box-shadow: 0 12px 28px rgba(17,24,39,.12); }
   </style>
-
-  <!-- Apply saved/system theme BEFORE paint -->
-  <script>
-    (function initTheme(){
-      const root = document.documentElement;
-      const saved = localStorage.getItem('theme'); // 'dark' | 'light' | null
-      const preferDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-      if (saved === 'dark' || (!saved && preferDark)) root.classList.add('dark');
-      else root.classList.remove('dark');
-    })();
-  </script>
 </head>
 <body class="bg-gray-50 text-gray-800 min-h-screen flex flex-col dark:bg-gray-950 dark:text-gray-100">
 
@@ -64,7 +48,7 @@
       </div>
 
       <p class="mt-2 text-white/90 max-w-2xl">
-        Search any English word for definitions, phonetics, audio, and synonyms — designed and built by Camelia Simion.
+        Search any English word for definitions, phonetics, audio, and synonyms — built by Camelia Simion.
       </p>
 
       <!-- Search -->
@@ -154,16 +138,17 @@
     const themeIcon = $('#themeIcon');
     document.getElementById('year').textContent = new Date().getFullYear();
 
-    // Theme toggling + persistence
-    function setTheme(mode){ // 'dark' | 'light'
+    // 2) Toggle and persist theme
+    function setTheme(mode){
       const root = document.documentElement;
       if (mode === 'dark') root.classList.add('dark'); else root.classList.remove('dark');
       localStorage.setItem('theme', mode);
       themeIcon.textContent = mode === 'dark' ? '☀️' : '🌙';
       themeBtn.title = mode === 'dark' ? 'Switch to light mode' : 'Switch to dark mode';
     }
-    // Initialize icon based on current class
+    // initialize icon based on current class
     setTheme(document.documentElement.classList.contains('dark') ? 'dark' : 'light');
+
     themeBtn.addEventListener('click', () => {
       const isDark = document.documentElement.classList.contains('dark');
       setTheme(isDark ? 'light' : 'dark');
